--- a/package.json
+++ b/package.json
@@ -7,14 +7,27 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.4.2",
+    "@better-scroll/pull-up": "^2.4.2",
+    "axios": "^0.27.2",
+    "better-scroll": "^2.4.2",
+    "fastclick": "^1.0.6",
+    "mitt": "^3.0.0",
     "vue": "^3.0.0",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^4.0.0-0",
+    "vue3-lazy": "^1.0.0-alpha.1",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@moohng/postcss-px2vw": "^1.1.0",
     "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-plugin-vuex": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "postcss-px-to-viewport": "^1.1.1"
   }
 }
